add menu-title component

--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -1,1 +1,5 @@
-<p>menu-title works!</p>
+<div class="flex items-center justify-center">
+  <hr />
+  <h1 class="text-white my-3 text-[135px] fadeInAnimation">Amadeo Bon</h1>
+  <hr />
+</div>
