--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: #111111;
+  font-family: 'Space Grotesk', sans-serif;
 }
