--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,9 @@
 <app-menu-title></app-menu-title>
+<div class="articles">
+  <div class="articles__main">
+    <app-big-card></app-big-card>
+  </div>
+  <div class="articles__others">
+    <app-small-card></app-small-card>
+  </div>
+</div>
