terminando os big cards

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,23 @@
-<p>big-card works!</p>
+<div
+  class="container__big-card mx-3 w-[400px] h-[500px] flex flex-col items-start justify-start"
+>
+  <a href="#">
+    <div class="big-card__img">
+      <img
+        class="rounded-md"
+        src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png"
+        alt="placeholder"
+        height="180px"
+      />
+    </div>
+    <div class="big-card__title my-4">
+      <h1 class="text-[25px]">Cacilds vidis litro abertis.</h1>
+    </div>
+    <div class="big-card__description">
+      <p class="text-[16px] text-slate-500">
+        Mussum Ipsum, cacilds vidis litro abertis. Admodum accumsan disputationi
+        eu sit. Vide electram sadipscing et per.
+      </p>
+    </div>
+  </a>
+</div>
