--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -1,7 +1,9 @@
-<div class="flex items-center justify-center">
-  <hr />
-  <h1 class="text-white my-3 text-[135px] text-opacity-90 fadeInAnimation">
+<div class="container-fluid">
+  <hr class="mt-2" />
+  <h1
+    class="text-white flex items-center justify-center my-3 text-[70px] xl:text-[135px] text-opacity-90 fadeInAnimation"
+  >
     Amadeo Bon
   </h1>
-  <hr />
+  <hr class="mb-2" />
 </div>
