--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-menu-title></app-menu-title>
-<div class="articles">
+<div class="articles mt-[30px]">
   <div class="articles__main">
     <app-big-card></app-big-card>
   </div>
