--- a/src/styles.css
+++ b/src/styles.css
@@ -9,5 +9,13 @@
   padding: 0;
   box-sizing: border-box;
   background-color: #111111;
+  color: #f2f2f2f2;
   font-family: 'Space Grotesk', sans-serif;
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
