add small cards

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,13 +1,12 @@
 <div
-  class="container__big-card mx-3 w-[400px] h-[500px] flex flex-col items-start justify-start"
+  class="container__big-card mx-5 w-[400px] h-[500px] flex flex-col items-start justify-start"
 >
-  <a href="#">
+  <a href="#" class="hover:scale-[1.02] transition-all">
     <div class="big-card__img">
       <img
-        class="rounded-md"
+        class="rounded-md h-[220px]"
         src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png"
         alt="placeholder"
-        height="180px"
       />
     </div>
     <div class="big-card__title my-4">
