--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,17 @@
-<p>small-card works!</p>
+<div
+  class="container__small-card w-[700px] mb-5 hover:scale-[1.02] transition-all cursor-pointer"
+>
+  <div class="container__small-card-content flex flex-row">
+    <div class="small-card__img">
+      <img
+        class="rounded-md w-[180px] min-w-[180px] h-[100px] mr-5"
+        src="https://i1.wp.com/gelatologia.com/wp-content/uploads/2020/07/placeholder.png?ssl=1"
+        alt="placeholder"
+      />
+    </div>
+    <div class="small-card__title flex justify-center items-center">
+      <h1 class="text-[20px]">Mauris nec dolor in eros commodo tempor.</h1>
+    </div>
+  </div>
+  <div><hr class="text-slate-100 my-5" /></div>
+</div>
