--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -1,9 +1,7 @@
 <div class="container-fluid">
-  <hr class="mt-2" />
   <h1
     class="text-white flex items-center justify-center my-3 text-[70px] xl:text-[135px] text-opacity-90 fadeInAnimation"
   >
-    Amadeo Bon
+    THE BLOG
   </h1>
-  <hr class="mb-2" />
 </div>
