--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,12 @@
 <app-menu-title></app-menu-title>
-<div class="articles mt-[30px]">
+<div class="articles mt-[30px] flex flex-col xl:flex-row justify-center">
   <div class="articles__main">
     <app-big-card></app-big-card>
   </div>
   <div class="articles__others">
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
     <app-small-card></app-small-card>
   </div>
 </div>
