add menu bar and icons

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,30 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+  <ul class="flex flex-row items-center justify-evenly">
+    <li class="hover:opacity-75 hover:scale-[1.03] transition-all">
+      <fa-icon [icon]="faLinkedin"></fa-icon>
+      <a
+        href="https://www.linkedin.com/in/amadeo-bon/"
+        class="mx-2"
+        target="_blank"
+        >Linkedin</a
+      >
+    </li>
+    <li><span>|</span></li>
+    <li class="hover:opacity-75 hover:scale-[1.03] transition-all">
+      <fa-icon [icon]="faGithub"></fa-icon>
+      <a href="https://github.com/Amadeo-Frontend" class="mx-2" target="_blank"
+        >Github</a
+      >
+    </li>
+    <li><span>|</span></li>
+    <li class="hover:opacity-75 hover:scale-[1.03] transition-all">
+      <fa-icon [icon]="faInstagram"></fa-icon>
+      <a
+        href="https://www.instagram.com/amadeo_bon/"
+        class="mx-2"
+        target="_blank"
+        >Instagram</a
+      >
+    </li>
+  </ul>
+</div>
