--- a/src/app/components/menu-title/menu-title.component.css
+++ b/src/app/components/menu-title/menu-title.component.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Seymour+One&display=swap');
 
 h1 {
-  font-family: 'Pacifico', cursive;
+  font-family: 'Seymour One', sans-serif;
   text-shadow: 1px 1px 5px rgba(255, 255, 255, 0);
 }
 
