--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -1,7 +1,9 @@
-<div class="container-fluid">
+<div class="container__menu-title">
+  <hr class="my-4" />
   <h1
-    class="text-white flex items-center justify-center my-3 text-[70px] xl:text-[135px] text-opacity-90 fadeInAnimation"
+    class="gradient-text flex items-center justify-center my-3 text-[70px] xl:text-[95px] text-opacity-90 fadeInAnimation"
   >
-    THE BLOG
+    AMADEO´S BLOG
   </h1>
+  <hr class="my-4" />
 </div>
