--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
+<header class="mt-5">
+  <app-menu-bar></app-menu-bar>
+</header>
 <app-menu-title></app-menu-title>
 <div class="articles mt-[30px] flex flex-col xl:flex-row justify-center">
   <div class="articles__main">
