--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,10 +1,10 @@
 <div
-  class="container__big-card mx-5 w-[400px] h-[500px] flex flex-col items-start justify-start"
+  class="container__big-card w-full p-4 mb-3 flex flex-col items-start justify-start xl:w-[400px] xl:h-[500px] xl:mx-5"
 >
   <a href="#" class="hover:scale-[1.02] transition-all">
     <div class="big-card__img">
       <img
-        class="rounded-md h-[220px]"
+        class="rounded-md h-[250px] max-w-[500px] md:h-[280px]"
         src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png"
         alt="placeholder"
       />
