--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,10 +1,12 @@
 <div
   class="container__small-card w-[700px] mb-5 hover:scale-[1.02] transition-all cursor-pointer"
 >
-  <div class="container__small-card-content flex flex-row">
+  <div
+    class="container__small-card-content p-3 flex flex-col justify-center items-start xl:flex-row xl:items-center"
+  >
     <div class="small-card__img">
       <img
-        class="rounded-md w-[180px] min-w-[180px] h-[100px] mr-5"
+        class="rounded-md mb-2 w-[180px] min-w-[180px] h-[100px] mr-5"
         src="https://i1.wp.com/gelatologia.com/wp-content/uploads/2020/07/placeholder.png?ssl=1"
         alt="placeholder"
       />
