--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,13 +7,25 @@
     class="articles mt-[30px] w-full flex flex-col md:flex-col xl:flex-row justify-center"
   >
     <div class="articles__main">
-      <app-big-card></app-big-card>
+      <app-big-card
+        cardImg="https://i.ytimg.com/vi/skn2phViCaY/maxresdefault.jpg"
+        cardTitle="MWZ: Uma Nova Era de Desafios e Estratégias no Gaming"
+        cardDescription="Descubra novas tramas, ambientes assustadores e um gameplay que testará suas habilidades ao máximo. 'Zumbis em Guerra Moderna' não é apenas um jogo, é uma experiência imersiva de sobrevivência e tática que redefine o gênero."
+      ></app-big-card>
     </div>
     <div class="articles__others">
-      <app-small-card></app-small-card>
-      <app-small-card></app-small-card>
-      <app-small-card></app-small-card>
-      <app-small-card></app-small-card>
+      <app-small-card
+        smallCardImg="https://i.ytimg.com/vi/bVmAV0Q3TqI/maxresdefault.jpg"
+        smallCardTitle="Pack-A-Punch Tutorial"
+      ></app-small-card>
+      <app-small-card
+        smallCardImg="https://th.bing.com/th/id/OIP.a7Dm6zhdaz7P6MxK4ebVnQHaEK?pid=ImgDet&w=202&h=114&c=7&dpr=1,3"
+        smallCardTitle="COD MOBILE: Zombie mode gameplay"
+      ></app-small-card>
+      <app-small-card
+        smallCardImg="https://th.bing.com/th/id/OIP.XgaqKaf36YDKK_NI32r2ngFNC7?pid=ImgDet&w=202&h=114&c=7&dpr=1,3"
+        smallCardTitle="Call of duty: WW2 Zombies"
+      ></app-small-card>
     </div>
   </div>
 </body>
