--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -3,7 +3,7 @@
   <h1
     class="gradient-text flex items-center justify-center my-3 text-[28px] md:text-[50px] xl:text-[95px] text-opacity-90 fadeInAnimation"
   >
-    AMADEO´S BLOG
+    ZOMBIES BLOG
   </h1>
   <hr class="my-4" />
 </div>
