--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,17 +2,17 @@
   class="container__small-card w-[700px] mb-5 hover:scale-[1.02] transition-all cursor-pointer"
 >
   <div
-    class="container__small-card-content p-3 flex flex-col justify-center items-start xl:flex-row xl:items-center"
+    class="container__small-card-content p-3 flex flex-col justify-center items-start xl:flex-row xl:items-center xl:justify-start"
   >
     <div class="small-card__img">
       <img
         class="rounded-md mb-2 w-[180px] min-w-[180px] h-[100px] mr-5"
-        src="https://i1.wp.com/gelatologia.com/wp-content/uploads/2020/07/placeholder.png?ssl=1"
+        src="{{ smallCardImg }}"
         alt="placeholder"
       />
     </div>
     <div class="small-card__title flex justify-center items-center">
-      <h1 class="text-[20px]">Mauris nec dolor in eros commodo tempor.</h1>
+      <h1 class="text-[20px]">{{ smallCardTitle }}</h1>
     </div>
   </div>
   <div><hr class="text-slate-100 my-5" /></div>
