--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,9 @@
 <body class="w-full overflow-x-hidden">
-  <header class="mt-5">
-    <app-menu-bar></app-menu-bar>
-  </header>
   <app-menu-title></app-menu-title>
   <div
     class="articles mt-[30px] w-full flex flex-col md:flex-col xl:flex-row justify-center"
   >
-    <div class="articles__main">
+    <div class="articles__main p-3">
       <app-big-card
         cardImg="https://i.ytimg.com/vi/skn2phViCaY/maxresdefault.jpg"
         cardTitle="MWZ: Uma Nova Era de Desafios e Estratégias no Gaming"
