--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -12,7 +12,7 @@
     <div class="big-card__title uppercase my-4">
       <h1 class="text-[25px]">{{ cardTitle }}</h1>
     </div>
-    <div class="big-card__description">
+    <div class="big-card__description mb-5">
       <p class="text-[16px] text-slate-500">
         {{ cardDescription }}
       </p>
