--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,5 +1,5 @@
 <div
-  class="container__small-card w-[700px] mb-5 hover:scale-[1.02] transition-all cursor-pointer"
+  class="container__small-card p-4 w-[700px] mb-5 hover:scale-[1.02] transition-all cursor-pointer"
 >
   <div
     class="container__small-card-content p-3 flex flex-col justify-center items-start xl:flex-row xl:items-center xl:justify-start"
@@ -11,9 +11,12 @@
         alt="placeholder"
       />
     </div>
-    <div class="small-card__title flex justify-center items-center">
-      <h1 class="text-[20px]">{{ smallCardTitle }}</h1>
+    <div
+      class="small-card__title flex justify-center items-center hover:opacity-75"
+    >
+      <fa-icon [icon]="faNewspaper"></fa-icon>
+      <h1 class="text-[20px] m-2">{{ smallCardTitle }}</h1>
     </div>
   </div>
-  <div><hr class="text-slate-100 my-5" /></div>
+  <div class="p-3"><hr class="text-slate-100 my-5" /></div>
 </div>
