add content dinamic

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,7 +1,7 @@
 <div
   class="container__big-card w-full p-4 mb-3 flex flex-col items-start justify-start xl:w-[400px] xl:h-[500px] xl:mx-5"
 >
-  <a href="#" class="hover:scale-[1.02] transition-all">
+  <a [routerLink]="['content', Id]" class="hover:scale-[1.02] transition-all">
     <div class="big-card__img">
       <img
         class="rounded-md shadow-md object-fill h-[250px] max-w-[500px] md:h-[280px]"
