--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -14,7 +14,7 @@
     >
       <a [routerLink]="['content', Id]"
         ><fa-icon [icon]="faNewspaper"></fa-icon>
-        <h1 class="text-[20px] m-2">{{ smallCardTitle }}</h1></a
+        <h1 class="text-[20px]">{{ smallCardTitle }}</h1></a
       >
     </div>
   </div>
