--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,27 @@
 <body class="w-full overflow-x-hidden">
-  <app-menu-title></app-menu-title>
+  <div data-aos="fade-in" data-aos-duration="2500">
+    <app-menu-title></app-menu-title>
+  </div>
   <div
     class="articles mt-[30px] w-full flex flex-col md:flex-col xl:flex-row justify-center"
   >
-    <div *ngIf="dados.length > 0" class="articles__main p-3">
+    <div
+      *ngIf="dados.length > 0"
+      class="articles__main p-3"
+      data-aos="fade-right"
+      data-aos-duration="2500"
+      data-aos-offset="300"
+      data-aos-easing="ease-in-sine"
+    >
       <app-big-card [Id]="dados[0].id"></app-big-card>
     </div>
-    <div class="articles__others">
+    <div
+      class="articles__others"
+      data-aos="fade-left"
+      data-aos-duration="2500"
+      data-aos-offset="300"
+      data-aos-easing="ease-in-sine"
+    >
       <app-small-card [Id]="'2'"></app-small-card>
       <app-small-card [Id]="'3'"></app-small-card>
       <app-small-card [Id]="'4'"></app-small-card>
