fix responsive small cards

--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,4 +1,4 @@
-<div class="container__small-card p-4 w-[700px] mb-5">
+<div class="container__small-card p-4 w-full xl:w-[700px] mb-5">
   <div
     class="container__small-card-content p-3 flex flex-col justify-center items-start xl:flex-row xl:items-center xl:justify-start"
   >
