--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -25,6 +25,7 @@
       <app-small-card [Id]="'2'"></app-small-card>
       <app-small-card [Id]="'3'"></app-small-card>
       <app-small-card [Id]="'4'"></app-small-card>
+      <app-small-card [Id]="'5'"></app-small-card>
     </div>
   </div>
 </body>
