--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<header class="mt-5">
+<header class="mt-5" data-aos="fade-in" data-aos-duration="2500">
   <app-menu-bar></app-menu-bar>
 </header>
+
 <router-outlet></router-outlet>
+
+<app-footer></app-footer>
