--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@
   color: #f2f2f2f2;
   font-family: 'Space Grotesk', sans-serif;
   text-decoration: none;
+  transition: all 1.5s ease-in;
 }
 
 img {
