--- a/src/app/pages/content/content.component.html
+++ b/src/app/pages/content/content.component.html
@@ -6,8 +6,11 @@
       alt=""
     />
   </div>
-  <a class="my-3 hover:text-accent hover:translate-x-2" [routerLink]="['']">
-    << VOLTAR</a
+  <a
+    class="my-4 inline-block text-white font-bold py-2 px-4 rounded-full bg-gradient-to-r from-blue-600 to-cyan-600 border border-transparent transform hover:scale-110 hover:border-white transition-transform duration-3000 ease-in-out"
+    [routerLink]="['']"
+  >
+    VOLTAR</a
   >
   <div class="content__title mt-4">
     <h1 class="text-[25px]">{{ contentTitle }}</h1>
