--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -1,7 +1,7 @@
 <div class="container__menu-title">
   <hr class="my-4" />
   <h1
-    class="flex items-center justify-center my-3 text-[28px] md:text-[50px] xl:text-[95px] text-opacity-90"
+    class="flex items-center justify-center my-3 text-[28px] md:text-[50px] xl:text-[95px] text-opacity-90 shadow-custom"
   >
     ZOMBIES BLOG
   </h1>
