--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<header class="mt-5" data-aos="fade-in" data-aos-duration="2500">
+<header
+  class="mt-5"
+  data-aos="fade-right"
+  data-aos-easing="linear"
+  data-aos-duration="2500"
+>
   <app-menu-bar></app-menu-bar>
 </header>
 
